--- a/mystyle.css
+++ b/mystyle.css
@@ -97,12 +97,25 @@ a{
     align-items: center;
 }
 
-.form-img{
-    margin-right: 20px;
+img {
+    max-width: 100%;
+    height: auto;
 }
-.form-img img{
-    width: 50%;
-    flex-shrink: 0;
+
+.form-img img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.form-img {
+    width: 45%;
+}
+
+.form-img img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
 .form-container{
     width: 40%;
@@ -150,3 +163,17 @@ a{
 .form-group label{
     font-size: 12px;
 }
+
+/* Tablet View*/
+
+@media((min-width:601px) and (max-width:768px)){
+    .form-flex{
+        flex-direction: column;
+    }
+
+    .form-img img{
+        margin-right: 0px;
+    }
+}
+    
+     
